knightcrawler/ingressroute-torrentio.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: torrentio.${dns_domain}
  namespace: knightcrawler
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrentio.${dns_domain}`)
      kind: Rule
      services:
        - name: knightcrawler-addon
          kind: Service
          port: 7000
      middlewares:  
        - name: chain-public-stremio-addon
          namespace: traefik
